--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ install_requires =
     numpy==1.21.3
     Pillow==8.4.0
     face_recognition_models==0.3.0
+    face-recognition==1.3.0
     dlib==19.22.1
     click==8.0.3
 package_dir =
